[package]
name = "ruchy-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3.0"

[dependencies.ruchy]
path = ".."

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transpiler"
path = "fuzz_targets/transpiler.rs"
test = false
doc = false
bench = false

[[bin]]
name = "repl_input"
path = "fuzz_targets/repl_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "full_pipeline"
path = "fuzz_targets/full_pipeline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fmt"
path = "fuzz_targets/fuzz_fmt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cli"
path = "fuzz_targets/fuzz_cli.rs"
test = false
doc = false
bench = false

[[bin]]
name = "property_type_inference"
path = "fuzz_targets/property_type_inference.rs"
test = false
doc = false
bench = false
