[package]
name = "ruchy-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the Ruchy language"
readme = "../README.md"
keywords = ["cli", "language", "compiler", "transpiler", "rust"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[[bin]]
name = "ruchy"
path = "src/main.rs"

[dependencies]
ruchy = { path = "..", version = "0.4.13" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustyline = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
atty = "0.2"