[package]
name = "ruchy-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DEPRECATED: Install 'ruchy' package instead. This package is kept for backward compatibility only."
readme = "../README.md"
keywords = ["cli", "language", "compiler", "transpiler", "rust"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[[bin]]
name = "ruchy"
path = "src/main.rs"

[dependencies]
ruchy = { path = "..", version = "0.9.0" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustyline = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
atty = "0.2"
serde_json = { workspace = true }