[workspace]

[package]
name = "ruchy-wasm"
version = "3.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core dependencies only - no tokio, no networking
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# WebWorker support
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

# Minimal Ruchy core functionality - exclude problematic dependencies
ruchy = { path = "..", default-features = false, features = [] }

[profile.release]
# Aggressive optimization for size
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler

[package.metadata.wasm-pack]
"wasm-opt" = ["-Oz", "--enable-simd"]